--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,7 +11,7 @@
       {% if not isHome %}
         {{ title }} -
       {% endif %}
-      localghost</title>
+      Digital Archive</title>
     <script src={{ jsFilename }}></script>
     {% if extraCSS %}
       {% for file in extraCSS %}
@@ -20,8 +20,6 @@
     {% endif %}
     <link rel="preload" as="style" href={{ cssFilename }}>
     <link rel="stylesheet" type="text/css" href={{ cssFilename }}>
-<script data-goatcounter="https://localghost.goatcounter.com/count"
-        async defer src="//gc.zgo.at/count.js"></script>
   </head>
   <body>
     {% include "partials/svg/defs.html" %}
