--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,10 +4,5 @@
 @forward "utils";
 @forward "fonts";
 @forward "syntax";
-@forward "themes/city";
-@forward "themes/minimalist";
-@forward "themes/sunset";
-@forward "themes/vaporwave";
-@forward "themes/1999";
-@forward "themes/2003";
+@forward "themes/shared";
 @forward "themes/garden";
