Fix Jekyll build errors and improve theme: remove problematic blog posts, rename theme to 'stardew valley', remove flower decorations

--- a/src/_includes/partials/theme-switcher.njk
+++ b/src/_includes/partials/theme-switcher.njk
@@ -1,8 +1,8 @@
 <fieldset class="theme-switcher" id="theme-switcher">
   <legend class="visually-hidden">choose a theme</legend>
-    <label for="garden" title="garden">
+    <label for="garden" title="stardew valley">
     <input class="theme-option" name="theme" type="radio" id="garden" value="garden" checked>
       <img eleventy:ignore src="/img/garden-icon.png" alt=""/>
-      <span class="visually-hidden">garden</span>
+      <span class="visually-hidden">stardew valley</span>
   </label>
 </fieldset>
